--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/fira-mono": "^5.0.8",
     "astro": "^4.0.8",
+    "astro-i18next": "1.0.0-beta.18",
+    "i18next": "^22.4.10",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
